# gateway-system

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DEPLOYMENT.md  Dockerfile  LICENSE  PERFORMANCE.md  PLAN.md  PROGRESS.md  README.md  SUMMARY.md  docker-compose.yml  test_redis_integration.cpp
certs/: server.crt  server.key
config/: prometheus.yml
config/grafana/dashboards/: dashboard.yml  gateway-dashboard.json
deploy/: deploy.sh  gateway.service  nginx.conf
docs/: GRAFANA_GUIDE.md  MESSAGE_STORAGE_IMPLEMENTATION.md  OBJECT_POOL_OPTIMIZATION.md  PRODUCTION_DEPLOYMENT.md  PROTOCOL_IMPLEMENTATION.md  STRESS_TEST_GUIDE.md  STRESS_TEST_RESULTS.md  WEBSOCKET_IMPLEMENTATION.md
examples/: README.md
examples/game/: README.md
examples/im/: README.md
examples/iot/: README.md
examples/push/: README.md
include/: buffer_pool.hpp  connection.hpp  connection_manager.hpp  consistent_hash.hpp  grpc_gateway_client.hpp  grpc_gateway_service.hpp  io_context_pool.hpp  message_router.hpp  message_storage.hpp  metrics.hpp  metrics_server.hpp  node_registry.hpp  object_pool.hpp  protocol.hpp  server.hpp  ssl_server.hpp  websocket_connection.hpp  websocket_server.hpp
k8s/: deployment.yaml  redis.yaml
proto/: gateway.grpc.pb.cc  gateway.grpc.pb.h  gateway.pb.cc  gateway.pb.h  gateway.proto
scripts/: benchmark.sh  benchmark_threads.sh  deploy.sh  generate_flamegraph.sh  performance_test.sh  stress_test.sh  test_distributed.sh
src/: connection.cpp  connection_manager.cpp  consistent_hash.cpp  grpc_gateway_client.cpp  grpc_gateway_service.cpp  io_context_pool.cpp  main.cpp  main_ws.cpp  message_router.cpp  message_storage.cpp  metrics.cpp  metrics_server.cpp  node_registry.cpp  node_registry_redis.cpp  protocol.cpp  server.cpp  ssl_server.cpp  websocket_connection.cpp  websocket_server.cpp
test-results/: test_100_snapshot.txt  test_500_snapshot.txt
test-results/20260525_193359/: test_1000_connections_metrics.txt  test_1000_connections_stats.csv  test_100_connections_metrics.txt  test_100_connections_stats.csv  test_5000_connections_metrics.txt  test_5000_connections_stats.csv  test_500_connections_metrics.txt  test_500_connections_stats.csv
test-results/20260525_194413/: test_1000_connections_metrics.txt  test_1000_connections_stats.csv  test_100_connections_metrics.txt  test_100_connections_stats.csv  test_500_connections_metrics.txt  test_500_connections_stats.csv
test-results/20260525_201106/: test_100_connections_stats.csv
tests/: benchmark_buffer_pool.cpp  stress_test_client.cpp  test_buffer_pool.cpp  test_consistent_hash.cpp  test_grpc_communication.cpp  test_message_storage.cpp  test_metrics.cpp  test_protocol.cpp  test_ssl_server.cpp  test_websocket.cpp
